--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ footer {
 /*Para el carrito*/
 .cart-container {
     max-width: 1200px;
-    margin: 100px;
+    margin: 100px auto;
     padding: 80px;
     background-color: #f8f8f8;
     border-radius: 8px;
