--- a/styles.css
+++ b/styles.css
@@ -334,7 +334,7 @@ footer {
 .photo {
     width: 150px;
     height: 150px;
-    border: 3px solid #392288;
+    border: 3px;
     margin-bottom: 10px;
 }
 
